--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 	<body>
 		<div class="container" id="main">
 			Build
+      <div id="gee-mail-area">
+      <ul>
+        <li id="date"></li>
+        <li id="sender"></li>
+        <li id="subject"></li>
+      </ul>
+      <div id="body">
+      </div>
+       </div>
 		</div>
+    <script></script>
 	</body>
 </html>
