tried to pull new html to see if any changes.  nothing happened, will continue to work on original

--- a/index.html
+++ b/index.html
@@ -2,10 +2,56 @@
 	<head>
 		<script src="js/mail-generator.js"></script>
 		<link href="css/style.css" rel="stylesheet" media="screen">
+    <script src="/js/app.js"></script>
+    
+    
+   
+
+
+
+
+
+
+
 	</head>
+
 	<body>
-		<div class="container" id="main">
-			Build Me!
-		</div>
-	</body>
+    <div class="container" id="main">
+      <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRQUsJ9rzcKmXzRWQEH5XxTfEk7P7-cHAwIUf87u4eNUOz_cs_4"><em>Gee</em><strong>Mail</strong>
+    </div>
+
+
+    <div id="inbox"><h5><strong>Inbox</strong></h5>
+
+      <div id="inboxCounter"></div>
+    </div>
+    <!-- For printing inbox count -->
+
+    <div class="second_row">
+
+      <div id="date"><h5><strong>Date</strong></h5></div>
+
+      <div id="sender"><h5><strong>Sender</strong></h5></div>
+
+      <div id="subject"><h5><strong>Subject</strong></h5></div>
+
+    </div>
+
+    <div class="third_row">
+
+      <div id="dates">mail.date</div>
+
+      <div id="senders">mail.sender</div>
+
+      <div id="subjects"><a id="message">mail.subject</a></div>
+
+    </div>
+
+
+
+
+
+
+
+  </body>
 </html>
