got date are to populate, but 'undefined' shows up instead of actual date

--- a/index.html
+++ b/index.html
@@ -2,18 +2,10 @@
 	<head>
 		<script src="js/mail-generator.js"></script>
 		<link href="css/style.css" rel="stylesheet" media="screen">
-    <script src="/js/app.js"></script>
     
-    
-   
-
-
-
-
-
-
 
 	</head>
+
 
 	<body>
     <div class="container" id="main">
@@ -39,11 +31,11 @@
 
     <div class="third_row">
 
-      <div id="dates">mail.date</div>
+      <div id="dates">message.date</div>
 
-      <div id="senders">mail.sender</div>
+      <div id="senders">message.sender</div>
 
-      <div id="subjects"><a id="message">mail.subject</a></div>
+      <div id="subjects">message.subject</div>
 
     </div>
 
@@ -51,7 +43,9 @@
 
 
 
-
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="/js/app.js"></script>
 
   </body>
 </html>
