--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
     <div class="second_row">
 
-      <div id="date"><h5><strong>Date</strong></h5></div>
+      <div id="theDate"><h5><strong>Date</strong></h5></div>
 
-      <div id="sender"><h5><strong>Sender</strong></h5></div>
+      <div id="theSender"><h5><strong>Sender</strong></h5></div>
 
-      <div id="subject"><h5><strong>Subject</strong></h5></div>
+      <div id="theSubject"><h5><strong>Subject</strong></h5></div>
 
     </div>
 
