--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 	<head>
 		<script src="js/mail-generator.js"></script>
@@ -38,7 +40,8 @@
       <div id="subjects">message.subject</div>
 
     </div>
-
+  
+    <button onclick="clearInterval(newMessage)">Stop Messages</button>
 
 
 
