--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <script src="js/mail-generator.js"></script>
     <link href="css/style.css" rel="stylesheet" media="screen">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script> 
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>  
+    <script type="text/javascript" src="/app.js"></script>  
   </head>
   <body>
     <div class="container" id="main">
