--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
-<html>
+<html en="lang">
   <head>
     <script src="js/mail-generator.js"></script>
     <link href="css/style.css" rel="stylesheet" media="screen">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script> 
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body>
+    <h2>GeeMail</h2>
     <div class="container" id="main">
-      Build
       <div id="gee-mail-area">
-      <ul>
-        <li id="date"></li>
-        <li id="sender"></li>
-        <li id="subject"></li>
-      </ul>
-      <div id="body">
+        <ul>
+          <li id="email">
+            <span class="sender">Sender</span>
+            <span class="subject">Subject</span>
+            <span class="date">Date</span>
+          </li>
+        </ul>
+        <div id="body"></div>
       </div>
-       </div>
     </div>
     <script></script>
   </body>
