--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <html>
 	<head>
+		<title>Gee Mail Plus</title>
 		<script src="js/mail-generator.js"></script>
 		<link href="css/style.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
 		<div class="container" id="main">
-			Build Me!
+			<img src="https://d3rnbxvnd0hlox.cloudfront.net/images/channels/6/icons/large.png"><strong><h1>GEE-MAIL+</h1></strong>
 		</div>
+
+			<div id="Inbox"><h3><strong>Inbox</strong></h3>
+			<div id="InboxCounter"></div>
+			</div>
+
+			<div class="second_row">
+			<div id="date"><h5><strong>Date</strong></h5>
+			</div>
+
+			<div id="sender"><h5><strong>Sender</strong></h5>
+			</div>
+
+			<div id="subject"><h5><strong>Subject</strong></h5>
+			</div>
+
+		<div class="third_row">
+			<div id="subjects"><a id="message>mail.subject"</a>
+			</div>
+
+		<div>
 	</body>
 </html>
