--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <div class="container" id="main">
       <div id="gee-mail-area">
         <ul>
-          <li id="email">
+<!--  
+          <li class="email">
             <span class="sender">Sender</span>
             <span class="subject">Subject</span>
             <span class="date">Date</span>
           </li>
+  -->
         </ul>
         <div id="body"></div>
       </div>
