fixed date issue.  now need to create js to make new html for dates, senders and subjects

--- a/index.html
+++ b/index.html
@@ -31,14 +31,17 @@
 
     </div>
 
-    <div class="third_row">
+    <!-- <div class="third_row">
 
-      <div id="dates">message.date</div>
+      <div id="dates">messagedate</div>
 
       <div id="senders">message.sender</div>
 
       <div id="subjects">message.subject</div>
 
+    </div> -->
+    
+    <div id="emailContainer"> 
     </div>
   
     <button onclick="clearInterval(newMessage)">Stop Messages</button>
