--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="css/style.css" rel="stylesheet" media="screen">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>  
-    <script type="text/javascript" src="/app.js"></script>  
+    <script type="text/javascript" src="js/app.js"></script>  
   </head>
   <body>
     <div class="container" id="main">
