--- a/index.html
+++ b/index.html
@@ -6,21 +6,31 @@
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/app.js"></script>
   </head>
+
   <body>
+
     <h2>GeeMail</h2>
+    
     <div class="container" id="main">
+
       <div id="gee-mail-area">
-        <ul>
- 
+
+        <ul id="inbox">
           <li class="email">
             <span class="sender">Sender</span>
             <span class="subject">Subject</span>
             <span class="date">Date</span>
           </li>
         </ul>
+
         <div id="body"></div>
+
       </div>
-    </div>
+
+    </div> 
+
     <script></script>
+
   </body>
+
 </html>
