--- a/index.html
+++ b/index.html
@@ -30,19 +30,13 @@
       <div id="theSubject"><h5><strong>Subject</strong></h5></div>
 
     </div>
-
-    <!-- <div class="third_row">
-
-      <div id="dates">messagedate</div>
-
-      <div id="senders">message.sender</div>
-
-      <div id="subjects">message.subject</div>
-
-    </div> -->
     
-    <div id="emailContainer"> 
+    <div  class="third_row"id="emailContainer"> 
+      <ul id="emailList">
+      
+      </ul>
     </div>
+    <!-- create table or divs with spans for above -->
   
     <button onclick="clearInterval(newMessage)">Stop Messages</button>
 
