set up separate ul for date/timer

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       <ul id="emailList">
       
       </ul>
+      <ul id="newEmailDate">
+        
+      </ul>
     </div>
     <!-- create table or divs with spans for above -->
   
