mails populate every 3 seconds

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <!-- create table or divs with spans for above -->
   
-    <button onclick="clearInterval(newMessage)">Stop Messages</button>
+    <button id ="stop_messages">Stop Messages</button>
 
 
 
