WIP with HTML/CSS.

--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
 
 			<div class="second_row">
 			<div id="date"><h5><strong>Date</strong></h5>
-			</div>
+<!-- 				<ul>June 19, 2014</ul>
+ -->			</div>
 
 			<div id="sender"><h5><strong>Sender</strong></h5>
-			</div>
+<!-- 				<ul>Cortney Gusick</ul>
+ -->			</div>
 
 			<div id="subject"><h5><strong>Subject</strong></h5>
-			</div>
+<!-- 				<ul>Boot Camp</ul> 
+ -->			</div>
 
 		<div class="third_row">
 			<div id="subjects"><a id="message>mail.subject"</a>
-			</div>
+		</div>
 
 		<div>
 	</body>
