--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html en="lang">
-  <head>
-    <script src="js/mail-generator.js"></script>
+  <head>  
     <link href="css/style.css" rel="stylesheet" media="screen">
   </head>
 
@@ -11,24 +10,24 @@
     <div class="container" id="main">
 
       <div id="gee-mail-area">
-
-        <ul id="inbox">
-          <li class="email">
-            <span class="sender">Sender</span>
-            <span class="subject">Subject</span>
-            <span class="date">Date</span>
-          </li>
-        </ul>
-
+        <div id="nav-area">
+          <ul id="inbox">
+           <!--  <li class="email">
+              <span class="sender">Sender</span>
+              <span class="subject">Subject</span>
+              <span class="date">Date</span>
+            </li> -->
+          </ul>
+        </div>
         <div id="body"></div>
-
       </div>
-
     </div> 
 
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/mail-generator.js"></script>
     <script src="js/app.js"></script>
+
 
   </body>
 
