--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
     <div class="container" id="main">
 
       <div id="gee-mail-area">
+        <span id="inboxCounter"></span>
         <div id="nav-area">
           <ul id="inbox">
-           <!--  <li class="email">
-              <span class="sender">Sender</span>
-              <span class="subject">Subject</span>
-              <span class="date">Date</span>
-            </li> -->
           </ul>
         </div>
         <div id="body"></div>
