--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 	</head>
   <body>
 		<div class="container" id="main">
-			<img src="https://d3rnbxvnd0hlox.cloudfront.net/images/channels/6/icons/large.png"><strong><h1>GEE-MAIL+</h1></strong>
+			<img src="https://d3rnbxvnd0hlox.cloudfront.net/images/channels/6/icons/large.png"><strong><h1><span>GEE-MAIL+</h1></span></strong>
 		</div>
-
 		<div id="Inbox"><h3><strong>Inbox</strong></h3>
+
 		<div id="InboxCounter"></div>
 		</div>
 
 		<div class="second_row">
+
 		<div id="date"><h5><strong>Date</strong></h5>
     </div>
-
 		<div id="sender"><h5><strong>Sender</strong></h5>
     </div>
 
@@ -29,13 +29,24 @@
 
 		<div class="third_row">
 			<div id="subjects"><a id="message>mail.subject"</a>
-      <div  class="third_row"id="emailContainer"> 
+		<div  class="third_row"id="emailContainer"> 
       <ul id="emailList">
       </ul>
       <ul id="newEmailDate">
       </ul>
     </div>
-    <!-- create table or divs with spans for above -->
+    <div id="placeholder">
+    	<ul>Placeholder</ul>
+    	<ul>Placeholder</ul>
+    	<ul>Placeholder</ul>
+    	<ul>Placeholder</ul>
+    	<ul>Placeholder</ul>
+    	<ul>Placeholder</ul>
+    	<ul>Placeholder</ul>
+    	<ul>Placeholder</ul>
+    	<ul>Placeholder</ul>
+    	<ul>Placeholder</ul>
+<!-- create table or divs with spans for above
     <button id ="stop_messages">Stop Messages</button>
 		</div>
 
