-Inbox Counter Working

--- a/index.html
+++ b/index.html
@@ -6,19 +6,9 @@
   <body>
 
     <h2>GeeMail</h2>
-    
-    <div class="container" id="main">
+    <h1 id="counter">This Counts</h1>
 
-      <div id="gee-mail-area">
-        <span id="inboxCounter"></span>
-        <div id="nav-area">
-          <ul id="inbox">
-          </ul>
-        </div>
-        <div id="body"></div>
-      </div>
-    </div> 
-
+    <div id="inbox"></div>  
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/mail-generator.js"></script>
