--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
   <body>
 
     <h2>GeeMail</h2>
+    <img src="images/EazyE.jpg">
+    <h5>The Eaziezt Email around. Beeatches.</h5>
     <h1 id="counter">This Counts</h1>
 
-    <div id="inbox"></div>  
+    <div id="inbox">
+      <li id="header">
+      <span class="header-style">Sender</span>
+      <span class="header-style">Subject</span>
+      <span class="header-style">Date</span>
+      </li>
+    </div>  
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/mail-generator.js"></script>
