--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html>
 	<head>
 		<script src="js/mail-generator.js"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js">
+		</script>
 		<link href="css/style.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
+		<h1>Gee-Mail</h1>
 		<div class="container" id="main">
-			Build Me!
+			Emails are loading
 		</div>
+		<script src="js/app.js"></script>
 	</body>
 </html>
