hid mail messages with hide()

--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
 		<link href="css/style.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
-		<h1>Gee-Mail</h1>
+		<h1>Gee-Mail-Plus +</h1>
 		<div class="container" id="main">
-			Emails are loading
+			Welcome to your inbox
 		</div>
+		<div class="messages" id="lists">
+			<!-- <ul>
+				<li>
+					
+				</li>
+			</ul> -->
 		<script src="js/app.js"></script>
 	</body>
 </html>
