started delete button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h5>The Eaziezt Email around. Beeatches.</h5>
     <h1 id="counter">This Counts</h1>
 
+    <button type="button">Delete</button>
+
     <div id="inbox">
       <li id="header">
       <span class="header-style">Sender</span>
