added inbox counter to top of page using class .email

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	</head>
 	<body>
 		<h1>Gee-Mail-Plus +</h1>
-		<div class="container" id="main">
-			Welcome to your inbox
+		<div class="container" id="inbox_counter">
+			Inbox
 		</div>
 		<div class="messages" id="lists">
 			<!-- <ul>
