--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 <html en="lang">
   <head>  
-    <link href="css/style.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="/css/foundation.css" />
+    <link rel="stylesheet" href="css/style.css" media="screen">
+    <link href='http://fonts.googleapis.com/css?family=UnifrakturMaguntia' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
-
+    <div class="row">
     <h2>GeeMail</h2>
     <img src="images/EazyE.jpg">
     <h5>The Eaziezt Email around. Beeatches.</h5>
     <h1 id="counter">This Counts</h1>
 
-    <button type="button">Delete</button>
 
     <div id="inbox">
+      <button type="button">Delete</button>
       <li id="header">
-      <span class="header-style">Sender</span>
-      <span class="header-style">Subject</span>
-      <span class="header-style">Date</span>
+        <span class="large-4 medium-4 small-4 columns" class="header-style">Sender</span>
+        <span class="large-4 medium-4 small-4 columns" class="header-style">Subject</span>
+        <span class="large-4 medium-4 small-4 columns" class="header-style">Date</span>
       </li>
     </div>  
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+    </div>
+
+    <script src="/js/vendor/jquery.js"></script>
+    <script src="/js/foundation.min.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
+
     <script src="js/mail-generator.js"></script>
     <script src="js/app.js"></script>
-
 
   </body>
 
