--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
         </div>
       <!-- </div> -->
     </header>
+    <!-- <div class="row"> large 12 below-->
+      <div class="large-9 medium-12 small-12 columns">
+        <!-- <button id ="stop_messages">Load/Stop Messages</button> -->
+        <a href="#" id="stop_messages" class="button [tiny small large]">Load/Stop Messages</a>
 
-    <div class="large-9 medium-12 small-12 columns">
-      <!-- <button id ="stop_messages">Load/Stop Messages</button> -->
-      <a href="#" id="stop_messages" class="button [tiny small large]">Load/Stop Messages</a>
+        <!-- For printing inbox count -->
+        <div id="inbox"><strong>Inbox</strong>
+          <div id="inboxCounter"></div>
+          <div id="messageCounter">Messages</div>
+        </div>
+      </div><!-- end div class large-9 -->
+    <!-- </div>end div .row -->
 
-      <!-- For printing inbox count -->
-      <div id="inbox"><strong>Inbox</strong>
-        <div id="inboxCounter"></div>
-        <div id="messageCounter">Messages</div>
-      </div>
-    </div><!-- end div class large-9 -->
-
-    <div class="second_row">
+    <div class="second_row show-for-medium-up">
 
       <div id="theDate" class="medium-4 medium-offset-1 columns"><h5><strong>Date</strong></h5></div>
 
