stop/load button ok for sml and med screens.  need to fix for large doesnt float

--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
         </div>
       <!-- </div> -->
     </header>
-    <!-- <div class="row"> large 12 below-->
-      <div class="large-9 medium-12 small-12 columns">
-        <!-- <button id ="stop_messages">Load/Stop Messages</button> -->
-        <a href="#" id="stop_messages" class="button [tiny small large]">Load/Stop Messages</a>
 
+   <div class="row" id="counterRow"> 
+    <!-- <div class="large-12 medium-12 small-12 columns"> -->
+      <div class="large-12 medium-6 small-2 columns">
+        
         <!-- For printing inbox count -->
-        <div id="inbox"><strong>Inbox</strong>
-          <div id="inboxCounter"></div>
-          <div id="messageCounter">Messages</div>
+        <div id="inbox"><strong id="inboxLabel">Inbox</strong>
+        <div id="inboxCounter"></div>
+        <div id="messageCounter">Messages</div>
         </div>
-      </div><!-- end div class large-9 -->
-    <!-- </div>end div .row -->
+        <!-- button to stop messages -->
+        <a href="#" id="stop_messages" class="button [tiny small large]">Load/Stop Messages</a>
+      </div><!-- end div class large-12 -->
+    </div><!-- end div .row -->
 
     <div class="second_row show-for-medium-up">
 
