finished responsive layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </li>
     </div>  
 
-    </div>
+    </div> <!-- ends "row" -->
 
     <script src="/js/vendor/jquery.js"></script>
     <script src="/js/foundation.min.js"></script>
