started check all function

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <div id="inbox">
       <button type="button">Delete</button>
+      <form id="checkall"><input type="checkbox"> Check All</form>
       <li id="header">
         <span class="large-4 medium-4 small-4 columns" class="header-style">Sender</span>
         <span class="large-4 medium-4 small-4 columns" class="header-style">Subject</span>
