--- a/index.html
+++ b/index.html
@@ -20,18 +20,21 @@
       <!-- </div> -->
     </header>
 
-   <div class="row" id="counterRow"> 
+   <div id="counterRow"> 
     <!-- <div class="large-12 medium-12 small-12 columns"> -->
-      <div class="large-12 medium-6 small-2 columns">
-        
+      <div class="large-10 medium-8 small-12 columns">
         <!-- For printing inbox count -->
-        <div id="inbox"><strong id="inboxLabel">Inbox</strong>
-        <div id="inboxCounter"></div>
-        <div id="messageCounter">Messages</div>
+        <div id="inbox">
+          <strong id="inboxLabel">Inbox</strong>
+          <div id="inboxCounter"></div>
+          <div id="messageCounter">Messages</div>
         </div>
-        <!-- button to stop messages -->
-        <a href="#" id="stop_messages" class="button [tiny small large]">Load/Stop Messages</a>
-      </div><!-- end div class large-12 -->
+      </div><!-- end div class large-10 -->  
+      <div class="large-2 medium-4 columns">
+      <!-- button to stop messages -->
+        <a href="#" id="stop_messages" class="button small">Load/Stop Messages</a>
+      </div>
+      
     </div><!-- end div .row -->
 
     <div class="second_row show-for-medium-up">
