fixed load button position for small size.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
    <div id="counterRow"> 
     <!-- <div class="large-12 medium-12 small-12 columns"> -->
-      <div class="large-10 medium-8 small-12 columns">
+      <div class="large-10 medium-8 small-8 columns">
         <!-- For printing inbox count -->
         <div id="inbox">
           <strong id="inboxLabel">Inbox</strong>
@@ -30,12 +30,12 @@
           <div id="messageCounter">Messages</div>
         </div>
       </div><!-- end div class large-10 -->  
-      <div class="large-2 medium-4 columns">
+      <div class="large-2 medium-4 small-4 columns">
       <!-- button to stop messages -->
         <a href="#" id="stop_messages" class="button small">Load/Stop Messages</a>
       </div>
       
-    </div><!-- end div .row -->
+    </div><!-- end div #counterRow -->
 
     <div class="second_row show-for-medium-up">
 
